; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_25134.c_is_glibc_vuln.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/local/extr_25134.c_is_glibc_vuln.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@vuln_glibc_versions = common dso_local global i32* null, align 8
@.str = private unnamed_addr constant [34 x i8] c"[+] Found vuln glibc version: %s\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @is_glibc_vuln() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 -1, i32* %2, align 4
  store i32 0, i32* %1, align 4
  br label %3

3:                                                ; preds = %19, %0
  %4 = load i32, i32* %1, align 4
  %5 = icmp slt i32 %4, 4
  br i1 %5, label %6, label %22

6:                                                ; preds = %3
  %7 = call i8* (...) @gnu_get_libc_version()
  %8 = load i32*, i32** @vuln_glibc_versions, align 8
  %9 = load i32, i32* %1, align 4
  %10 = sext i32 %9 to i64
  %11 = getelementptr inbounds i32, i32* %8, i64 %10
  %12 = load i32, i32* %11, align 4
  %13 = call i64 @strcmp(i8* %7, i32 %12)
  %14 = icmp eq i64 %13, 0
  br i1 %14, label %15, label %18

15:                                               ; preds = %6
  %16 = call i8* (...) @gnu_get_libc_version()
  %17 = call i32 @printf(i8* getelementptr inbounds ([34 x i8], [34 x i8]* @.str, i64 0, i64 0), i8* %16)
  store i32 1, i32* %2, align 4
  br label %18

18:                                               ; preds = %15, %6
  br label %19

19:                                               ; preds = %18
  %20 = load i32, i32* %1, align 4
  %21 = add nsw i32 %20, 1
  store i32 %21, i32* %1, align 4
  br label %3

22:                                               ; preds = %3
  %23 = load i32, i32* %2, align 4
  ret i32 %23
}

declare dso_local i64 @strcmp(i8*, i32) #1

declare dso_local i8* @gnu_get_libc_version(...) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
